--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "localgpt"
+name = "nonetchat"
 version = "0.1.1"
 authors = [
   { name="Mariyala Rohith", email="mariyalarohith29@gmail.com" },
@@ -14,5 +14,5 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/mrohith29/localgpt"
-Issues = "https://github.com/mrohith29/localgpt/issues"
+Homepage = "https://github.com/mrohith29/nonetchat"
+Issues = "https://github.com/mrohith29/nonetchat/issues"
