--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "nonetchat"
-version = "0.1.1"
+name = "chatlocalai"
+version = "0.1.5"
 authors = [
   { name="Mariyala Rohith", email="mariyalarohith29@gmail.com" },
 ]
